Implemented actions to log to activity history table.
